tests/ui/parser/issues/issue-63135.rs
//~v ERROR this file contains an unclosed delimiter
fn i(n{...,f #
